src/test/ui/type-check/unknown_type_for_closure.stderr
error[E0282]: type annotations needed
  --> $DIR/unknown_type_for_closure.rs:12:14
   |
LL |     let x = |_| {    }; //~ ERROR type annotations needed
   |              ^ consider giving this closure parameter a type

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0282"
